<resources>
    <string name="app_name">Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_fragment">Hello Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_password">Password</string>
    <string name="enter_username">Username</string>
    <string name="login_text">LOGIN</string>
    <string name="btn_login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign">SIGN UP</string>
    <string name="re_enter_password">Confirm Password</string>
    <string name="fullname">Fullname</string>
    <string name="telephone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="think">What do you think?</string>
    <string name="no_data">No Data!</string>
    <string name="username">Username</string>
    <string name="date_time">Date Time</string>
    <string name="status">Status</string>
    <string name="comment">Comment</string>
    <string name="_0">0</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
</resources>
