<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authen_screen.fragment.fragment.RegisterFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin_20"
                android:text="@string/sign"
                android:textColor="@color/black"
                android:textSize="@dimen/font_17" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:background="@drawable/custom_edittext"
                android:hint="@string/enter_username"
                android:paddingStart="@dimen/margin_15"
                android:paddingEnd="@dimen/margin_15"
                android:textColor="@color/black"
                android:textSize="@dimen/font_20" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/custom_edittext"
                android:hint="@string/enter_password"
                android:paddingStart="@dimen/margin_15"
                android:paddingEnd="@dimen/margin_15"
                android:textColor="@color/black"
                android:textSize="@dimen/font_20" />

            <EditText
                android:id="@+id/re_edtPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/custom_edittext"
                android:hint="@string/re_enter_password"
                android:paddingStart="@dimen/margin_15"
                android:paddingEnd="@dimen/margin_15"
                android:textColor="@color/black"
                android:textSize="@dimen/font_20" />

            <EditText
                android:id="@+id/edtFullname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/custom_edittext"
                android:hint="@string/fullname"
                android:paddingStart="@dimen/margin_15"
                android:paddingEnd="@dimen/margin_15"
                android:textColor="@color/black"
                android:textSize="@dimen/font_20" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/custom_edittext"
                android:hint="@string/address"
                android:paddingStart="@dimen/margin_15"
                android:paddingEnd="@dimen/margin_15"
                android:textColor="@color/black"
                android:textSize="@dimen/font_20" />

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/custom_edittext"
                android:hint="@string/telephone_number"
                android:paddingStart="@dimen/margin_15"
                android:paddingEnd="@dimen/margin_15"
                android:textColor="@color/black"
                android:textSize="@dimen/font_20" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:background="@drawable/custom_button"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/margin_20"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</FrameLayout>