<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_5"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_5">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_ava"
            android:layout_width="76dp"
            android:layout_height="63dp"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:src="@drawable/maytinhkhoe"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="3dp" />


        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_toEndOf="@id/iv_ava"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="@dimen/font_17"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_10"/>

        <TextView
            android:id="@+id/tv_dateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_username"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_toEndOf="@id/iv_ava"
            android:text="@string/date_time"
            android:textSize="@dimen/font_15" />

        <TextView

            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_ava"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="@dimen/font_15" />

        <LinearLayout

            android:id="@+id/LinerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_content"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/margin_5">

            <!--<ImageView-->
            <!--android:id="@+id/iv_countlove"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_marginStart="@dimen/margin_10"-->
            <!--android:background="@drawable/ic_mood_black"-->
            <!--android:padding="@dimen/margin_5" />-->

            <TextView
                android:id="@+id/tv_countLike"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:layout_marginStart="@dimen/margin_5"/>

            <TextView
                android:id="@+id/tv_countComment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_0"
                android:layout_marginStart="@dimen/margin_15"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:layout_marginStart="@dimen/margin_5"/>

        </LinearLayout>

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greylite1"
            android:layout_below="@id/LinerLayout"
            android:layout_margin="@dimen/margin_5"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LinerLayout"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/margin_5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/iv_like"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_like"
                    android:paddingTop="@dimen/margin_5"/>

                <TextView
                    android:id="@+id/tv_like"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/like"
                    android:padding="@dimen/margin_10"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_comment_white"
                    android:padding="@dimen/margin_5" />

                <TextView
                    android:id="@+id/tv_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/comment"
                    android:padding="@dimen/margin_10"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView

                    android:id="@+id/iv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_share"
                    android:padding="@dimen/margin_5" />

                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/margin_10"
                    android:text="@string/share"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>